--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "reenbit",
 	"version": "0.1.0",
-	"homepage": "https://dhafer94.github.io/random-jokes-chat-bot",
+	"homepage": "https://dhafer94.github.io/random-jokes-chat",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
